--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,7 @@
 {
-  "dart.flutterSdkPath": ".fvm/flutter_sdk",
-  // Remove .fvm files from search
-  "search.exclude": {
-    "**/.fvm": true
-  },
-  // Remove from file watching
-  "files.watcherExclude": {
-    "**/.fvm": true
-  },
   "flutterTools.getxDisplayContextMenu": false,
   "flutterTools.mobxDisplayContextMenu": true,
+  "cSpell.words": [
+    "notfound"
+  ],
 }
