--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   awesome_snackbar_content: ^0.1.3
   dio: ^5.1.2
   flutter_dotenv: ^5.0.2
+  flutter_mobx: ^2.0.6+5
   flutter_modular: ^5.0.3
   loading_animation_widget: ^1.2.0+4
   mobx: ^2.2.0
