--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
 
   awesome_snackbar_content: ^0.1.3
+  brasil_fields: ^1.13.1
   dio: ^5.1.2
   flutter_dotenv: ^5.0.2
   flutter_mobx: ^2.0.6+5
