--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,13 @@
   "cSpell.words": [
     "notfound"
   ],
+  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  // Remove .fvm files from search
+  "search.exclude": {
+    "**/.fvm": true
+  },
+  // Remove from file watching
+  "files.watcherExclude": {
+    "**/.fvm": true
+  }
 }
