chore: modificar o version manager do flutter para o puro

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,6 @@
   "cSpell.words": [
     "notfound"
   ],
-  "dart.flutterSdkPath": ".fvm/flutter_sdk",
-  // Remove .fvm files from search
-  "search.exclude": {
-    "**/.fvm": true
-  },
-  // Remove from file watching
-  "files.watcherExclude": {
-    "**/.fvm": true
-  }
+  "dart.flutterSdkPath": "C:\\Users\\Ricardo\\.puro\\envs\\version_3_10_6\\flutter",
+  "dart.sdkPath": "C:\\Users\\Ricardo\\.puro\\envs\\version_3_10_6\\flutter\\bin\\cache\\dart-sdk"
 }
